--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,10 +11,66 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <com.beardedhen.androidbootstrap.BootstrapEditText
-                android:id="@+id/username"
-                style="@style/FMEditText" />
+            android:layout_gravity="center"
+            android:orientation="vertical">
+            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:bootstrapBrand="secondary"
+                app:hasBorder="true"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.beardedhen.androidbootstrap.AwesomeTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    app:bootstrapBrand="primary"
+                    app:fontAwesomeIcon="fa_user" />
+
+                <com.beardedhen.androidbootstrap.BootstrapEditText
+                    android:id="@+id/username"
+                    style="@style/FMEditText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:hint="@string/username"
+                    app:bootstrapBrand="primary"
+                    app:roundedCorners="true" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.beardedhen.androidbootstrap.AwesomeTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    app:bootstrapBrand="primary"
+                    app:fontAwesomeIcon="fa_coffee" />
+
+                <com.beardedhen.androidbootstrap.BootstrapEditText
+                    android:id="@+id/password"
+                    style="@style/FMEditText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:hint="@string/password"
+                    app:bootstrapBrand="primary"
+                    app:roundedCorners="true" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
